WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
319738
Web Inspector: InspectorThreadableLoaderClient::m_statusCode is uninitialized
https://bugs.webkit.org/show_bug.cgi?id=319738
Summary
Web Inspector: InspectorThreadableLoaderClient::m_statusCode is uninitialized
Ahmad Saleem
Reported
2026-07-18 00:01:36 PDT
ssia
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-07-18 00:01:43 PDT
<
rdar://problem/182578510
>
Ahmad Saleem
Comment 2
2026-07-18 00:02:47 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/69710
EWS
Comment 3
2026-07-18 09:08:04 PDT
Committed
317472@main
(163805a73a69): <
https://commits.webkit.org/317472@main
> Reviewed commits have been landed. Closing PR #69710 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug