Cherry-pick 317472@main (163805a73a69). https://bugs.webkit.org/show_bug.cgi?id=319738

Web Inspector: InspectorThreadableLoaderClient::m_statusCode is uninitialized
    https://bugs.webkit.org/show_bug.cgi?id=319738
    rdar://182578510

    Reviewed by Devin Rousso.

    m_statusCode had no default member initializer, unlike the other
    members of InspectorThreadableLoaderClient. It is set in
    didReceiveResponse() and read in didFinishLoading(), which relies on
    ThreadableLoaderClient's contract that didReceiveResponse() always
    precedes didFinishLoading(). Give it a safe default so a future
    change to that contract can't read uninitialized memory

    * Source/WebCore/inspector/InspectorThreadableLoaderClient.h:

    Canonical link: https://commits.webkit.org/317472@main

Canonical link: https://commits.webkit.org/305877.1065@webkitglib/2.52